--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>米老鼠</title>
-  <!-- <link rel="stylesheet" href="main.css"> -->
   <style>
     *{margin: 0; padding: 0; box-sizing: border-box;}
     *::before{margin: 0; padding: 0; box-sizing: border-box}
@@ -21,16 +20,20 @@
         background: rgb(30,144,255);
         background: radial-gradient(circle, rgba(30,144,255,1) 0%, rgba(188,222,255,1) 0%, rgba(30,144,255,1) 100%);
     }
-    #demo2{
-      width: 30%;
-      height: 100vh;
+    #demo1{
+      width: 100vw;
+      height: 30vh;
       top: 0;
       left: 0;
       border-right: 1px solid;
       overflow: auto;
       color: brown;
-      padding: 10px;
+      padding-left: 30px;
+      padding-top:10px ;
       
+    }
+    #demo2{
+      display: none;
     }
   </style>
 </head>
@@ -38,8 +41,13 @@
   
   
   <main>
-    <style id="demo1"></style>
-    <div id="demo2"></div>
+    <style id="demo2"></style>
+    <div id="demo1"></div>
+    <button id="start">开始</button>
+    <button id="start">暂停</button>
+    <button id="start">快速</button>
+    <button id="start">中速</button>
+    <button id="start">慢速</button>
     <div class="mouse-head">
       <div class="mouse-face">
         <div class="left-top"></div>
